feat: system data and statistic
