# pkg/contributesession/dto.go
@@ -26,7 +26,7 @@ func (s SessionCreateReq) Validate() error {
 		validation.Field(&s.OpenTime, validation.Required),
 		validation.Field(&s.ClosureTime,
 			validation.Required,
-			validation.Min(s.OpenTime),
+			validation.Min(s.OpenTime.AddDate(0, 0, 14)),
 		),
 		validation.Field(&s.FinalClosureTime,
 			validation.Required,
@@ -46,7 +46,7 @@ func (s SessionUpdateReq) Validate() error {
 		validation.Field(&s.OpenTime, validation.Required),
 		validation.Field(&s.ClosureTime,
 			validation.Required,
-			validation.Min(s.OpenTime),
+			validation.Min(s.OpenTime.AddDate(0, 0, 14)),
 		),
 		validation.Field(&s.FinalClosureTime,
 			validation.Required,
