# pkg/systemdata/entity.go
@@ -1,8 +1,20 @@
 package systemdata
 
+import "time"
+
+type ValueType string
+
+const (
+	Document ValueType = "document"
+	Int      ValueType = "int"
+	String   ValueType = "string"
+)
+
 type Entity struct {
-	Key   string
-	Value string
+	Key       string `gorm:"primaryKey"`
+	Value     string
+	Type      ValueType
+	UpdatedAt time.Time
 }
 
 func (e *Entity) TableName() string {
